# fastq-dupaway

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh
.github/: pull_request_template.md
doc/: algorithm.md
src/: NEW_external_sort.hpp  NEW_paired_external_sort.hpp  NEW_seq_dup_remover.hpp  OLD_paired_external_sort.hpp  OLD_seq_dup_remover.hpp  bufferedinput.hpp  comparator.cpp  comparator.hpp  constants.h  constants.hpp  dup_remover.hpp  external_sort.hpp  fastaview.cpp  fastaview.hpp  fastq.cpp  fastq.hpp  fastqview.cpp  fastqview.hpp  file_utils.cpp  file_utils.hpp  hash_dup_remover.cpp  hash_dup_remover.hpp  main.cpp  paired_external_sort.hpp  seq_dup_remover.hpp  seq_utils.cpp  seq_utils.hpp
test/: conftest.py  single.fa  test_basic.py  test_fast.py  test_seq.py  test_unordered.py
test/expected/: paired_fast_r2.fa  paired_tight_r1.fa  paired_tight_r2.fa  single_fast.fa  single_hamming.fa  single_loose.fa  unordered_deletion_r1.fa  unordered_deletion_r2.fa  unordered_interleaved_r1.fa  unordered_interleaved_r2.fa  unordered_shuffled_r1.fa  unordered_skewed_r1.fa  unordered_skewed_r2.fa
test/inputs/: paired_tight_r1.fa  paired_tight_r2.fa  single_hamming.fa  single_loose.fa  unordered_deletion_r1.fa  unordered_deletion_r2.fa  unordered_interleaved_r1.fa  unordered_interleaved_r2.fa  unordered_not_overlapped_r1.fa  unordered_not_overlapped_r2.fa  unordered_shuffled_r2.fa  unordered_skewed_r1.fa  unordered_skewed_r2.fa
